fix spacing

--- a/stylus/list.styl
+++ b/stylus/list.styl
@@ -132,8 +132,6 @@ ul.bigList
   li
     ellipsis()
     list-style: none
-    &:last-child a
-      margin-bottom: 0
 
   a
     heading_font()
